--- a/package.json
+++ b/package.json
@@ -18,6 +18,14 @@
   },
   "homepage": "https://github.com/gitbenji/explore#readme",
   "dependencies": {
-    "express": "^4.13.4"
+    "body-parser": "^1.15.0",
+    "cookie-parser": "^1.4.1",
+    "express": "^4.13.4",
+    "express-session": "^1.13.0",
+    "mongodb": "^2.1.7",
+    "mongoose": "^4.4.6",
+    "passport": "^0.3.2",
+    "passport-twitter": "^1.0.4",
+    "session": "^0.1.0"
   }
 }
