--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.1",
     "express": "^4.13.4",
     "express-session": "^1.13.0",
+    "mapbox": "^0.12.0",
     "mapbox.js": "^2.3.0",
     "mongodb": "^2.1.7",
     "mongoose": "^4.4.6",
